--- a/index.html
+++ b/index.html
@@ -4,10 +4,31 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="resources/styles.css" rel="stylesheet">
+     <link rel="icon" type="image/svg+xml" href="./favicon.ico"> 
     <title>Alpine JS Demo</title>
   </head>
   <body>
-    <h1>Alphine.js Crash Course</h1>
+    <div class="container mx-auto mt-6 max-w-sm">
+      <h1 class="text-3xl mb-4">Alphine.js Crash Course</h1>
+
+    <div x-data="{open:  false}">
+      <button x-on:click="open = !open" class="bg-slate-700 text-white px-4 py-2 rounded-xl">
+        Toggle
+      </button>
+
+      <div x-show="open" x-cloak>
+        <p class="bg-gray-200 p-4 my-6 rounded">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed illo esse quasi aut doloremque fuga, 
+          culpa laborum temporibus et soluta delectus repellat sapiente commodi, perferendis animi saepe. 
+          Repellat, ipsam saepe.
+        </p>
+      </div>
+    </div>
+
+    </div>
+
     <script src="./resources/index.js"></script>
+    <script src="./resources/tailwind-3-0-24.js"></script>
   </body>
 </html>
