--- a/index.html
+++ b/index.html
@@ -12,17 +12,23 @@
     <div class="container mx-auto mt-6 max-w-sm">
       <h1 class="text-3xl mb-4">Alphine.js Crash Course</h1>
 
-    <div x-data="{open:  false}">
+      <!-- This is for x-data which is an alpine component -->
+    <div x-data="{open:  false, name:'Aindriú'}">
       <button x-on:click="open = !open" class="bg-slate-700 text-white px-4 py-2 rounded-xl">
         Toggle
       </button>
 
-      <div x-show="open" x-cloak>
+      <!-- This is x-show  -->
+      <div x-show="open" x-transition x-cloak>
         <p class="bg-gray-200 p-4 my-6 rounded">
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed illo esse quasi aut doloremque fuga, 
           culpa laborum temporibus et soluta delectus repellat sapiente commodi, perferendis animi saepe. 
           Repellat, ipsam saepe.
         </p>
+      </div>
+      <!-- This is for x-text  -->
+      <div class="my-4">
+        the value of name is <span x-text="name" class="font-bold"></span>
       </div>
     </div>
 
