--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="resources/styles.css" rel="stylesheet">
      <link rel="icon" type="image/svg+xml" href="./favicon.ico"> 
+     <!-- Alpine Plugins -->
+    <script defer src="https://unpkg.com/@alpinejs/mask@3.x.x/dist/cdn.min.js"></script>
     <title>Alpine JS Demo</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.27.2/axios.min.js" integrity="sha512-odNmoc1XJy5x1TMVMdC7EMs3IVdItLPlCeL5vSUPN2llYKMJ2eByTTAIiiuqLg+GdNr9hF6z81p27DArRFKT7A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   </head>
@@ -125,8 +127,17 @@
 
       </div>
     </div>
+    <p>Go to <a href="stores.html">Stores.html</a>.</p>
+    <div class="mt-6">
+      <h3 class="text-2xl mb-2">Enter a date:</h3>
+      <input 
+      class="border w-full p-2" 
+      x-mask="99/99/9999" 
+      placeholder="DD/MM/YYYY">
+    </div>
   </div>
 
+</div>
   <footer x-data class="text-center mt-10">
     <p>Copyright &copy; <span x-text="new Date().getFullYear()"></span></p>
   </footer>
